# weather-prediction-ai-agent

./: .gitignore  .pre-commit-config.yaml  .renderignore  CHANGELOG.md  DEPLOY.md  Dockerfile  MODERNIZATION_SUMMARY.md  Procfile  README.md  README_DEPLOYMENT.md  RENDER_QUICKSTART.md  push_to_github.sh  pyproject.toml  render.yaml
agents/application/: creator.py  executor.py  prompts.py  trade.py  weather_predictor.py
agents/connectors/: weather_rag.py
agents/polymarket/: gamma.py  polymarket.py
agents/utils/: objects.py
agents/weather/: openweather.py
scripts/python/: cli.py  server.py
